# lameenc

./: .appveyor.yml  .gitignore  .travis-ci.sh  .travis-pi.sh  .travis.yml  CMakeLists.txt  DESCRIPTION.md  LICENSE  README.md  fixed-libmp3lame.sym  lameenc.c  patch-lame.cmake  pyproject.toml  setup.py
.github/workflows/: build.sh  cmake.yml
lameenc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
