[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lameenc"
description = "LAME encoding bindings"
readme = "DESCRIPTION.md"
requires-python = ">=3.10"
authors = [
  {name = "Chris Staite", email = "chris@yourdreamnet.co.uk"},
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/chrisstaite/lameenc"

[tool.setuptools_scm]
